<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_menu_event"
        android:title="@string/nav_menu_event">
        <menu>
            <item
                android:id="@+id/nav_store"
                android:enabled="false"
                android:icon="@drawable/ic_shopping_cart_grey_24dp"
                android:title="@string/nav_store_name" />
            <item
                android:id="@+id/nav_ticket"
                android:enabled="false"
                android:icon="@drawable/ic_local_activity_grey_24dp"
                android:title="@string/nav_ticket_name" />
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_view_list_white_24dp"
                android:title="@string/nav_history_name" />
            <item
                android:id="@+id/nav_reload"
                android:enabled="false"
                android:icon="@drawable/ic_sync_black_24dp"
                android:title="@string/nav_reload_name" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_menu_communicate"
        android:title="@string/nav_menu_communicate_name">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:enabled="false"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share_name" />
            <item
                android:id="@+id/nav_send_feedback"
                android:enabled="false"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send_feedback_name" />
        </menu>
    </item>

</menu>
